[package]
name = "trebutchet"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui_plot = "0.35.0"
nalgebra = { version = "0.34.2", features = ["rand"] }
num-dual = "0.13.6"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stacker = "0.1.23"
typenum = "1.19.0"
